2000-08-12  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-12  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* ja.po: Updated Japanese translation.

2000-08-11  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-08-09  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* ja.po: Updated Japanese translation.

2000-08-08  Yuri Syrota  <rasta@renome.rovno.ua>

	* uk.po: Updated Ukrainian translation.

2000-07-30  Fatih Demir	 <kabalak@gmx.net>

	* tr.po: Corrected some hotkeys.

2000-07-26  Fatih Demir  <kabalak@gmx.net> 

        * tr.po: Updated the Turkish translation.

2000-07-25  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* ja.po: Change some words.

2000-07-24  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* ja.po: Updated Japanese translation.

2000-07-24  Szabolcs BAN <shooby@gnome.hu>

	* hu.po: updated Hungarian translation.

2000-07-23  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-07-23  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-07-21  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2000-07-15  Robert Brady  <rwb197@zepler.org>

	* en_GB.po: Updated British translation.

2000-07-10  Jesus Bravo Alvarez  <jba@pobox.com>

	* gl.po: Updated Galician translation.

2000-07-09  Karl Eichwalder  <ke@suse.de>

	* de.po: Update.

2000-06-25  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* sl.po: fixed a bunch of typos and semantical errors ;)
	
2000-06-24  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-06-23  Christopher R. Gabriel  <cgabriel@mixadlive.com>

	* it.po: Updated italian translation

2000-06-21  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2000-06-22  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* ja.po: updated Japanese translation.

2000-06-18  Pablo Saratxaga <pablo@mandrakesoft.com>

	* sp.po,sr.po: Updated Serbian files
