@@ -1,200 +1,201 @@
-smproxy/smproxy.h
-smproxy/smproxy.c
-smproxy/save.c
-panel/xstuff.h
-panel/xstuff.c
-panel/tearoffitem.h
-panel/tearoffitem.c
-panel/swallow.h
-panel/swallow.c
-panel/status.h
-panel/status.c
-panel/status-docklet.h
-panel/status-docklet.c
-panel/sliding-widget.h
-panel/sliding-widget.c
-panel/session.h
-panel/session.c
-panel/rgb-stuff.h
-panel/rgb-stuff.c
-panel/panel_config_global.h
-panel/panel_config.h
-panel/panel_config.c
-panel/panel.h
-panel/panel.c
-panel/panel-widget.h
-panel/panel-widget.c
-panel/panel-util.h
-panel/panel-util.c
-panel/panel-types.h
-panel/panel-include.h
-panel/menu.h
-panel/menu.c
-panel/menu-util.h
-panel/menu-util.c
-panel/menu-rh.h
-panel/menu-rh.c
-panel/menu-properties.h
-panel/menu-properties.c
-panel/menu-fentry.h
-panel/menu-fentry.c
-panel/main.h
-panel/main.c
-panel/logout.h
-panel/logout.c
-panel/launcher.h
-panel/launcher.c
-panel/gnome-run.h
-panel/gnome-run.c
-panel/gnome-panel-properties.c
-panel/global-keys.h
-panel/global-keys.c
-panel/floating-widget.h
-panel/floating-widget.c
-panel/extern.h
-panel/extern.c
-panel/edge-widget.h
-panel/edge-widget.c
-panel/drawer.h
-panel/drawer.c
-panel/drawer-widget.h
-panel/drawer-widget.c
-panel/button-widget.h
-panel/button-widget.c
-panel/border-widget.h
-panel/border-widget.c
-panel/basep-widget.h
-panel/basep-widget.c
-panel/bad-applet.c
-panel/applet.h
-panel/applet.c
-panel/applet-widget.h
-panel/applet-widget.c
-panel/aligned-widget.h
-panel/aligned-widget.c
-panel/foobar-widget.c
-help-browser/window.h
-help-browser/window.c
-help-browser/visit.h
-help-browser/visit.c
-help-browser/transport.h
-help-browser/transport.c
-help-browser/toc2.h
-help-browser/toc2.c
-help-browser/toc2-man.h
-help-browser/toc2-man.c
-help-browser/toc2-info.h
-help-browser/toc2-info.c
-help-browser/toc2-ghelp.h
-help-browser/toc2-ghelp.c
-help-browser/toc.h
-help-browser/toc.c
-help-browser/toc-man.h
-help-browser/toc-man.c
-help-browser/toc-info.h
-help-browser/toc-info.c
-help-browser/toc-ghelp.h
-help-browser/toc-ghelp.c
-help-browser/sample.c
-help-browser/queue.h
-help-browser/queue.c
-help-browser/parseUrl.h
-help-browser/parseUrl.c
-help-browser/misc.h
-help-browser/misc.c
-help-browser/mime.h
-help-browser/mime.c
-help-browser/magic.h
-help-browser/magic.c
-help-browser/history.h
-help-browser/history.c
-help-browser/help-caller.c
-help-browser/help-browser-impl.c
-help-browser/gnome-helpwin.h
-help-browser/gnome-helpwin.c
-help-browser/gnome-help-browser.c
-help-browser/docobj.h
-help-browser/docobj.c
-help-browser/cache.h
-help-browser/cache.c
-help-browser/bookmarks.h
-help-browser/bookmarks.c
-help-browser/HTParse.h
-help-browser/HTParse.c
-gsm/splash.h
-gsm/splash.c
-gsm/session.h
-gsm/session-properties.c
-gsm/save.c
-gsm/save-session.c
-gsm/remote.c
-gsm/prop.c
-gsm/manager.h
-gsm/manager.c
-gsm/main.c
-gsm/logout.c
-gsm/ice.c
-gsm/gsm-protocol.h
-gsm/gsm-protocol.c
-gsm/gsm-client-row.h
-gsm/gsm-client-row.c
-gsm/gsm-client-list.h
-gsm/gsm-client-list.c
-gsm/gsm-client-editor.h
-gsm/gsm-client-editor.c
-gsm/gnome-login-check.c
-gsm/command.c
-gnome-terminal/gnome-terminal.h
-gnome-terminal/gnome-terminal.c
-gnome-terminal/corba.c
+applets/desk-guide/deskguide_applet.c
+applets/desk-guide/deskguide_applet.h
+applets/desk-guide/gstc.c
+applets/desk-guide/gstc.h
+applets/desk-guide/gwmdesktop.c
+applets/desk-guide/gwmdesktop.h
+applets/desk-guide/gwmh.c
+applets/desk-guide/gwmh.h
+applets/fish/fish.c
+applets/gen_util/clock.c
+applets/gen_util/clock.h
+applets/gen_util/mailcheck.c
+applets/gen_util/mailcheck.h
+applets/gen_util/main.c
+applets/gen_util/popcheck.c
+applets/gen_util/popcheck.h
+applets/gen_util/printer.c
+applets/gen_util/printer.h
+applets/tasklist/pixmaps.h
+applets/tasklist/tasklist_applet.c
+applets/tasklist/tasklist_applet.h
+applets/tasklist/tasklist_config.c
+applets/tasklist/tasklist_menu.c
+applets/tasklist/tasklist_properties.c
+gmenu/desktop.c
+gmenu/edit.c
+gmenu/gmenu.h
+gmenu/main.c
+gmenu/order.c
+gmenu/save.c
+gmenu/tree.c
+gmenu/treedel.c
+gmenu/treednd.c
+gmenu/treenew.c
+gmenu/treeutil.c
+gmenu/utils.c
+gnome-about/contributors.h
+gnome-about/gnome-about.c
+gnome-edit/gnome-edit.c
 gnome-hint/gnome-hint.c
 gnome-hint/gnome-hint-properties.c
-gnome-edit/gnome-edit.c
-gnome-about/gnome-about.c
-gnome-about/contributors.h
-gmenu/utils.c
-gmenu/treeutil.c
-gmenu/treenew.c
-gmenu/treednd.c
-gmenu/treedel.c
-gmenu/tree.c
-gmenu/save.c
-gmenu/order.c
-gmenu/main.c
-gmenu/gmenu.h
-gmenu/edit.c
-gmenu/desktop.c
-help-browser/gnome-man2html/gnome-man2html.c
-help-browser/gnome-info2html/version.h
-help-browser/gnome-info2html/utils.h
-help-browser/gnome-info2html/utils.c
-help-browser/gnome-info2html/parse.h
-help-browser/gnome-info2html/parse.c
-help-browser/gnome-info2html/main.c
-help-browser/gnome-info2html/html.h
-help-browser/gnome-info2html/html.c
+gnome-terminal/corba.c
+gnome-terminal/gnome-terminal.c
+gnome-terminal/gnome-terminal.h
+gsm/command.c
+gsm/gnome-login-check.c
+gsm/gsm-client-editor.c
+gsm/gsm-client-editor.h
+gsm/gsm-client-list.c
+gsm/gsm-client-list.h
+gsm/gsm-client-row.c
+gsm/gsm-client-row.h
+gsm/gsm-protocol.c
+gsm/gsm-protocol.h
+gsm/ice.c
+gsm/logout.c
+gsm/main.c
+gsm/manager.c
+gsm/manager.h
+gsm/prop.c
+gsm/remote.c
+gsm/save.c
+gsm/save-session.c
+gsm/session.h
+gsm/session-properties.c
+gsm/splash.c
+gsm/splash.h
+help-browser/HTParse.c
+help-browser/HTParse.h
+help-browser/bookmarks.c
+help-browser/bookmarks.h
+help-browser/cache.c
+help-browser/cache.h
+help-browser/docobj.c
+help-browser/docobj.h
+help-browser/gnome-help-browser.c
+help-browser/gnome-helpwin.c
+help-browser/gnome-helpwin.h
 help-browser/gnome-info2html/data.h
-applets/tasklist/tasklist_properties.c
-applets/tasklist/tasklist_menu.c
-applets/tasklist/tasklist_config.c
-applets/tasklist/tasklist_applet.h
-applets/tasklist/tasklist_applet.c
-applets/tasklist/pixmaps.h
-applets/gen_util/printer.h
-applets/gen_util/printer.c
-applets/gen_util/popcheck.h
-applets/gen_util/popcheck.c
-applets/gen_util/main.c
-applets/gen_util/mailcheck.h
-applets/gen_util/mailcheck.c
-applets/gen_util/clock.h
-applets/gen_util/clock.c
-applets/fish/fish.c
-applets/desk-guide/gwmh.h
-applets/desk-guide/gwmh.c
-applets/desk-guide/gwmdesktop.h
-applets/desk-guide/gwmdesktop.c
-applets/desk-guide/gstc.h
-applets/desk-guide/gstc.c
-applets/desk-guide/deskguide_applet.h
-applets/desk-guide/deskguide_applet.c
+help-browser/gnome-info2html/html.c
+help-browser/gnome-info2html/html.h
+help-browser/gnome-info2html/main.c
+help-browser/gnome-info2html/parse.c
+help-browser/gnome-info2html/parse.h
+help-browser/gnome-info2html/utils.c
+help-browser/gnome-info2html/utils.h
+help-browser/gnome-info2html/version.h
+help-browser/gnome-man2html/gnome-man2html.c
+help-browser/help-browser-impl.c
+help-browser/help-caller.c
+help-browser/history.c
+help-browser/history.h
+help-browser/magic.c
+help-browser/magic.h
+help-browser/mime.c
+help-browser/mime.h
+help-browser/misc.c
+help-browser/misc.h
+help-browser/parseUrl.c
+help-browser/parseUrl.h
+help-browser/queue.c
+help-browser/queue.h
+help-browser/sample.c
+help-browser/toc2.c
+help-browser/toc2-ghelp.c
+help-browser/toc2-ghelp.h
+help-browser/toc2.h
+help-browser/toc2-info.c
+help-browser/toc2-info.h
+help-browser/toc2-man.c
+help-browser/toc2-man.h
+help-browser/toc.c
+help-browser/toc-ghelp.c
+help-browser/toc-ghelp.h
+help-browser/toc.h
+help-browser/toc-info.c
+help-browser/toc-info.h
+help-browser/toc-man.c
+help-browser/toc-man.h
+help-browser/transport.c
+help-browser/transport.h
+help-browser/visit.c
+help-browser/visit.h
+help-browser/window.c
+help-browser/window.h
+panel/aligned-widget.c
+panel/aligned-widget.h
+panel/applet.c
+panel/applet.h
+panel/applet-widget.c
+panel/applet-widget.h
+panel/bad-applet.c
+panel/basep-widget.c
+panel/basep-widget.h
+panel/border-widget.c
+panel/border-widget.h
+panel/button-widget.c
+panel/button-widget.h
+panel/distribution.c
+panel/drawer.c
+panel/drawer.h
+panel/drawer-widget.c
+panel/drawer-widget.h
+panel/edge-widget.c
+panel/edge-widget.h
+panel/extern.c
+panel/extern.h
+panel/floating-widget.c
+panel/floating-widget.h
+panel/foobar-widget.c
+panel/global-keys.c
+panel/global-keys.h
+panel/gnome-panel-properties.c
+panel/gnome-run.c
+panel/gnome-run.h
+panel/launcher.c
+panel/launcher.h
+panel/logout.c
+panel/logout.h
+panel/main.c
+panel/main.h
+panel/menu.c
+panel/menu-fentry.c
+panel/menu-fentry.h
+panel/menu.h
+panel/menu-properties.c
+panel/menu-properties.h
+panel/menu-rh.c
+panel/menu-rh.h
+panel/menu-util.c
+panel/menu-util.h
+panel/panel.c
+panel/panel_config.c
+panel/panel_config_global.h
+panel/panel_config.h
+panel/panel.h
+panel/panel-include.h
+panel/panel-types.h
+panel/panel-util.c
+panel/panel-util.h
+panel/panel-widget.c
+panel/panel-widget.h
+panel/rgb-stuff.c
+panel/rgb-stuff.h
+panel/session.c
+panel/session.h
+panel/sliding-widget.c
+panel/sliding-widget.h
+panel/status.c
+panel/status-docklet.c
+panel/status-docklet.h
+panel/status.h
+panel/swallow.c
+panel/swallow.h
+panel/tearoffitem.c
+panel/tearoffitem.h
+panel/xstuff.c
+panel/xstuff.h
+smproxy/save.c
+smproxy/smproxy.c
+smproxy/smproxy.h
