@@ -1,3 +1,8 @@
+2000-08-13  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+	* POTFILES.in: added missing file.
+
 2000-08-12  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
